--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "bootstrap": "^4.5.2",
     "classnames": "2.2.6",
     "date-fns": "2.10.0",
     "gray-matter": "4.0.2",
     "next": "latest",
     "react": "^16.13.0",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.0",
     "remark": "11.0.2",
     "remark-html": "10.0.0",
