--- a/package.json
+++ b/package.json
@@ -9,26 +9,28 @@
   },
   "dependencies": {
     "bootstrap": "^4.5.2",
-    "classnames": "2.2.6",
-    "date-fns": "2.10.0",
-    "gray-matter": "4.0.2",
+    "classnames": "^2.3.1",
+    "date-fns": "^2.28.0",
+    "gray-matter": "^4.0.3",
     "next": "latest",
-    "react": "^16.13.0",
-    "react-bootstrap": "^1.3.0",
-    "react-dom": "^16.13.0",
-    "remark": "11.0.2",
-    "remark-html": "10.0.0",
-    "typescript": "^3.9.2",
-    "zod": "^1.11.9"
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
+    "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.6",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.2",
+    "typescript": "^5.0.3",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/node": "^18.0.3",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "postcss": "^8.4.14",
     "@types/classnames": "^2.2.10",
     "@types/jest": "^25.2.2",
-    "@types/node": "^14.0.1",
-    "@types/react": "^16.9.35",
-    "@types/react-dom": "^16.9.8",
     "postcss-preset-env": "^6.7.0",
-    "tailwindcss": "^1.4.0"
+    "tailwindcss": "^3.1.4"
   },
   "license": "MIT"
 }
