--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "blog-starter-typescript",
-  "version": "1.0.0",
   "scripts": {
     "dev": "next",
     "build": "next build",
@@ -23,13 +22,14 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/classnames": "^2.3.1",
+    "@types/jest": "^25.2.3",
     "@types/node": "^18.0.3",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "autoprefixer": "^10.4.14",
     "postcss": "^8.4.14",
-    "@types/classnames": "^2.2.10",
-    "@types/jest": "^25.2.2",
-    "postcss-preset-env": "^6.7.0",
+    "postcss-preset-env": "^6.7.1",
     "tailwindcss": "^3.1.4"
   },
   "license": "MIT"
