--- a/package.json
+++ b/package.json
@@ -22,14 +22,13 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@types/classnames": "^2.3.1",
     "@types/jest": "^25.2.3",
     "@types/node": "^18.0.3",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.14",
-    "postcss-preset-env": "^6.7.1",
+    "postcss-import": "^15.1.0",
     "tailwindcss": "^3.1.4"
   },
   "license": "MIT"
